service-googleapis.yaml
apiVersion: v1
kind: Service
metadata:
  name: www-googleapis-com
  namespace: nginx-ingress-caching
spec:
  type: ExternalName
  externalName: www.googleapis.com
